--- a/nb2/.gitignore
+++ b/nb2/.gitignore
@@ -109,7 +109,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-#.env
+.env
 .venv
 env/
 venv/
@@ -137,5 +137,5 @@ dmypy.json
 
 # pytype static type analyzer
 .pytype/
-.version
+
 # End of https://www.toptal.com/developers/gitignore/api/python
