--- a/nb2/pyproject.toml
+++ b/nb2/pyproject.toml
@@ -6,13 +6,17 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7.3"
 nonebot2 = "^2.0.0.a1"
-nb-cli = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
-nonebot-test = "^0.1.0"
+nb-cli = "^0.5.0"
+nonebot-plugin-test = "^0.3.0"
+
+[nonebot.plugins]
+plugins = []
+plugin_dirs = ["nb2/plugins"]
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
