--- a/nb2/.env.dev
+++ b/nb2/.env.dev
@@ -15,3 +15,6 @@ REDIS_PASSWORD='123456'
 REDIS_DB=0
 
 IMGROOT=/root/
+CMD_PRE=export ALL_PROXY=http://127.0.0.1:1081
+AIOHTTP=http://127.0.0.1:1081
+JD_COOKIE=pt_key=AAJhvyqcADB_sG82GMTIr5OqTQIVYY7FlZEdBUnCVEFSLQ0ybVZtBh_fQyXWxioobkM84y8duqM; pt_pin=jd_70203bd825f03
