--- a/nb2/.env.dev
+++ b/nb2/.env.dev
@@ -1,7 +1,8 @@
 DRIVER=nonebot.drivers.fastapi
 HOST=0.0.0.0  # 配置 NoneBot 监听的 IP/主机名
 PORT=8899  # 配置 NoneBot 监听的端口
-DEBUG=true  # debug热启动
+/*DEBUG=true  # debug热启动*/
+fastapi_reload=true
 
 SUPERUSERS=["1761512493"]  # 配置 NoneBot 超级用户
 NICKNAME=["awesome", "bot"]  # 配置机器人的昵称
@@ -17,4 +18,7 @@ REDIS_DB=0
 IMGROOT=/root/
 CMD_PRE=export ALL_PROXY=http://127.0.0.1:1081
 AIOHTTP=http://127.0.0.1:1081
-JD_COOKIE=pt_key=AAJhvyqcADB_sG82GMTIr5OqTQIVYY7FlZEdBUnCVEFSLQ0ybVZtBh_fQyXWxioobkM84y8duqM; pt_pin=jd_70203bd825f03
+JD_COOKIE=pt_pin=jd_70203bd825f03;pt_key=AAJh_OMRADBTYVJbuBAMKUUiSLC5P-HA6Tt5fij9-OkL4tlq1l6LWNP9zg3Nhd_1M4Ww8n_e3Jc
+
+
+GOCQ_ACCOUNTS = [{"uin": "1928994748"}]
