--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 DRIVER=nonebot.drivers.fastapi
 HOST=0.0.0.0  # 配置 NoneBot 监听的 IP/主机名
 PORT=8899  # 配置 NoneBot 监听的端口
-fastapi_reload=true
+fastapi_reload=false
 apscheduler_autostart=true
 
 SUPERUSERS=["1761512493"]  # 配置 NoneBot 超级用户
