--- a/.env.dev
+++ b/.env.dev
@@ -49,3 +49,6 @@ RISK_CONTROL=true # 风控模式 启动后会使用合并转发 只有gocq有实
 RECORD_PRIORITY=99 # 记录上一张图片matcher的优先级，与 上一张 命令有关
 
 B_COMMENTS=False
+
+
+NEWFAN=["1761512493"]
