--- a/.env.dev
+++ b/.env.dev
@@ -33,7 +33,7 @@ repeater_group = ["732370841","68724983"]  # 支持复读的群号
 repeater_min_message_times = 2
 repeater_min_message_length = 1
 
-CMD_PRE=export ALL_PROXY=http://127.0.0.1:1081
+/*CMD_PRE=export ALL_PROXY=http://127.0.0.1:1081*/
 CMD_SUPER = [1761512493,2822103204,1928906357]
 CMD_BAN = []
 
@@ -53,3 +53,7 @@ B_COMMENTS=False
 
 SEARCH_LIMIT=4  # 搜索限制 防刷屏
 RISK_CONTROL=true # 风控模式 启动后会使用合并转发 只有gocq有实现
+
+
+
+AI_DRAW_TOKEN=lkqtMiW2PCHdVuLgzv7yZbYR09TxEG85
