--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ nonebot2 = "^2.0.0.a1"
 nb-cli = "^0.5.0"
 nonebot-plugin-test = "^0.3.0"
 
-[nonebot.plugins]
+[tool.nonebot]
 plugins = []
-plugin_dirs = ["nb2/plugins"]
+plugin_dirs = ["nb/plugins"]
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
