--- a/.env.dev
+++ b/.env.dev
@@ -15,8 +15,8 @@ REDIS_DB=0
 
 GOCQ_WEBUI_USERNAME=anlen123
 GOCQ_WEBUI_PASSWORD=lhq1761512493
-GOCQ_ACCOUNTS = [{"uin": "1079224933","protocol": 2}]
-/*GOCQ_ACCOUNTS = [{"uin": "1928994748","protocol": 2}]*/
+/*GOCQ_ACCOUNTS = [{"uin": "1079224933","protocol": 1}]*/
+GOCQ_ACCOUNTS = [{"uin": "1928994748","protocol": 2}]
 /*0	iPad	无*/
 /*1	Android Phone	无*/
 /*2	Android Watch	无法接收 notify 事件、无法接收口令红包、无法接收撤回消息*/
@@ -72,3 +72,6 @@ ENABLE_PRIVATE_CHAT = True   # 私聊开关，默认开启，改为False关闭
 
 RECORD_PATH=/root/my_nonebot2/record.json      
 INVERTED_INDEX_PATH=/root/my_nonebot2/inverted_index.json
+
+
+meilisearch_host = 127.0.0.1
