--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,8 @@ dmypy.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 accounts/
+
+data/images
+data/leveldb-v3
+data/videos
+gocq
