--- a/.env.dev
+++ b/.env.dev
@@ -28,3 +28,7 @@ PROXY=http://127.0.0.1:7890  # type: str e.g. PROXY=http://127.0.0.1:8889
 # XUANRAN_PROXY=export ALL_PROXY=http://127.0.0.1:1081
 
 # YGO_MAX=20
+
+
+nonebot_plugin_masterduel_root_dir=D:\\nb2\my_nonebot2\plugins\\nonebot_plugin_masterduel\\nonebot_plugin_masterduel
+nonebot_plugin_masterduel_img_dir=D:\\nb2\my_nonebot2\plugins\\nonebot_plugin_masterduel\\nonebot_plugin_masterduel\\img
