--- a/.env.prod
+++ b/.env.prod
@@ -16,7 +16,7 @@ REDIS_DB=0
 GOCQ_WEBUI_USERNAME=anlen123
 GOCQ_WEBUI_PASSWORD=lhq1761512493
 /*GOCQ_ACCOUNTS = [{"uin": "1079224933","protocol": 2}]*/
-GOCQ_ACCOUNTS = [{"uin": "1928994748","protocol": 2}]
+GOCQ_ACCOUNTS = [{"uin": "1928994748","protocol": 2},{"uin": "1079224933","protocol": 2}]
 /*0	iPad	无*/
 /*1	Android Phone	无*/
 /*2	Android Watch	无法接收 notify 事件、无法接收口令红包、无法接收撤回消息*/
