--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,5 @@ data/images
 data/leveldb-v3
 data/videos
 gocq
+/plugins/nonebot_plugin_masterduel/nonebot_plugin_masterduel/img/card_dir/
+/plugins/nonebot_plugin_masterduel/nonebot_plugin_masterduel/img/cai/
